--- a/.github/workflows/robot-test.yml
+++ b/.github/workflows/robot-test.yml
@@ -30,7 +30,7 @@ jobs:
         chrome-version: stable
 
     - name: Install ChromeDriver
-      ruses: nanasess/setup-chromedriver@v2
+      uses: nanasess/setup-chromedriver@v2
 
     - name: Install dependencies
       run: |
