--- a/.github/workflows/robot-test.yml
+++ b/.github/workflows/robot-test.yml
@@ -61,22 +61,22 @@ jobs:
         enable_jekyll: false
 
     - name: Send to Feishu
-      if: always()
-      uses: foxundermoon/feishu-action@v2
-      with:
-        url: ${{ secrets.FEISHU_WEBHOOK_URL }}
-        msg_type: post
-        content: |
-          {"zh_cn": {
-            "title": "Robot Framework 测试执行结果",
-            "content": [
-              [{"tag":"text","text":"🤖 测试执行完成\n"}, 
-               {"tag":"text","text":"分支：${{ github.ref_name }}\n"}, 
-               {"tag":"text","text":"提交：${{ github.sha }}\n"},
-               {"tag":"text","text":"提交者：${{ github.actor }}\n"},
-               {"tag":"text","text":"状态：${{ steps.robot_test.outcome == 'success' && '✅ 成功' || '❌ 失败' }}\n"},
-               {"tag":"text","text":"测试报告："},
-               {"tag":"a","text":"点击查看","href":"https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/report.html"}],
-              [{"tag":"text","text":"\n如果测试失败，请检查以下可能的原因：\n1. 测试用例编写是否正确\n2. 测试环境是否正常\n3. 被测系统是否可访问"}]
-            ]
-          }}
+      if: success()
+      run: |
+        REPORT_URL="https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/report.html"
+        if [ "${{ job.status }}" == "success" ]; then
+          STATUS_EMOJI="✅"
+          STATUS_TEXT="成功"
+        else
+          STATUS_EMOJI="❌"
+          STATUS_TEXT="失败"
+        fi
+        COMMIT_MSG="${{ github.event.head_commit.message }}"
+        COMMIT_URL="${{ github.event.head_commit.url }}"
+        WORKFLOW_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+        
+        MESSAGE="${STATUS_EMOJI} Robot Framework测试执行${STATUS_TEXT}\n\n🔍 提交信息：${COMMIT_MSG}\n📊 测试报告：${REPORT_URL}\n🔗 工作流详情：${WORKFLOW_URL}"
+        
+        curl -X POST -H "Content-Type: application/json" \
+        -d "{\"msg_type\":\"text\",\"content\":{\"text\":\"$MESSAGE\"}}" \
+        ${{ secrets.FEISHU_WEBHOOK_URL }}
